# opencv_ar_object

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bash  build.bat
assets/axis/: axis.fbx  axis.glb  axis2.fbx  axis3.fbx
assets/unitychan/: Material.json  deunitychan.fbx  unitychan.fbx  unitychan_WIN00_fbx7binary.fbx  wait.fbx  win.fbx
include/: Animation.hpp  Definitions.hpp  Definitions.hpp.in  InputEvent.hpp  Manager.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp  Skeleton.hpp  Texture.hpp  Util.hpp  VertexArray.hpp
include/Actor/: ARMarker.hpp  Actor.hpp  Axis.hpp  Capture.hpp  DebugActor.hpp  Grid.hpp  TestSprite.hpp  UnityChan.hpp
include/Component/: CameraComponent.hpp  Component.hpp  MeshComponent.hpp  SkinMeshComponent.hpp  SpriteComponent.hpp  VideoComponent.hpp
include/glad/: glad.h
shaders/: axis.frag  grid.frag  grid.vert  mesh.vert  skinmesh.vert  sprite.frag  sprite.vert  unitychan.frag
src/: Animation.cpp  CMakeLists.txt  Manager.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Skeleton.cpp  Texture.cpp  Util.cpp  VertexArray.cpp  glad.c  glfw_sample_window.cpp  main.cpp
src/Actor/: ARMarker.cpp  Actor.cpp  Axis.cpp  Capture.cpp  DebugActor.cpp  Grid.cpp  TestSprite.cpp  UnityChan.cpp
src/Component/: CameraComponent.cpp  Component.cpp  MeshComponent.cpp  SkinMeshComponent.cpp  SpriteComponent.cpp  VideoComponent.cpp
